--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,16 @@
 /* write your override styles here */
+#tag-2 {
+    background: url(../images/tag-2.png) no-repeat;
+    z-index: 6;
+    display: block;
+}
+.slick {
+    background: url(../images/tag-3.png) no-repeat;
+    z-index: 5;
+    display: block;
+}
+#tag-4 {
+    background: url(../images/tag-4.png) no-repeat;
+    z-index: 4;
+    display: block;
+}
